# constellation

./: CMakeLists.txt  README.md  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h
Files/: 128.xml  256.xml  32.xml  A16.xml
